--- a/.github/workflows/fetch-helpcenter.yml
+++ b/.github/workflows/fetch-helpcenter.yml
@@ -13,59 +13,65 @@ jobs:
           ZENDESK_EMAIL: ${{ secrets.ZENDESK_EMAIL }}
           ZENDESK_API_TOKEN: ${{ secrets.ZENDESK_API_TOKEN }}
         run: |
-          AUTH=$(echo -n "${ZENDESK_EMAIL}/token:${ZENDESK_API_TOKEN}" | base64)
           BASE="https://${ZENDESK_SUBDOMAIN}.zendesk.com/api/v2/help_center"
+          AUTH="${ZENDESK_EMAIL}/token:${ZENDESK_API_TOKEN}"
           mkdir -p results
 
           echo "=== Fetching categories ==="
-          curl -s -H "Authorization: Basic ${AUTH}" "${BASE}/categories.json" | python3 -m json.tool > results/categories.json
+          curl -sf -u "${AUTH}" "${BASE}/categories.json" > results/categories.json
 
           echo "=== Fetching sections ==="
-          curl -s -H "Authorization: Basic ${AUTH}" "${BASE}/sections.json?per_page=100" | python3 -m json.tool > results/sections.json
+          curl -sf -u "${AUTH}" "${BASE}/sections.json?per_page=100" > results/sections.json
 
-          echo "=== Fetching articles ==="
-          PAGE=1
-          echo '[]' > results/articles_all.json
-          while true; do
-            RESP=$(curl -s -H "Authorization: Basic ${AUTH}" "${BASE}/articles.json?per_page=100&page=${PAGE}")
-            COUNT=$(echo "$RESP" | python3 -c "import sys,json; d=json.load(sys.stdin); print(len(d.get('articles',[])))")
-            echo "$RESP" | python3 -c "
-          import sys,json
-          d=json.load(sys.stdin)
-          existing=json.load(open('results/articles_all.json'))
-          for a in d.get('articles',[]):
-              existing.append({'id':a['id'],'title':a['title'],'section_id':a.get('section_id'),'draft':a.get('draft'),'created_at':a.get('created_at'),'updated_at':a.get('updated_at'),'label_names':a.get('label_names',[]),'vote_sum':a.get('vote_sum',0),'vote_count':a.get('vote_count',0)})
-          json.dump(existing,open('results/articles_all.json','w'),indent=2)
-          "
-            echo "Page ${PAGE}: ${COUNT} articles"
-            NEXT=$(echo "$RESP" | python3 -c "import sys,json; print(json.load(sys.stdin).get('next_page',''))")
-            if [ -z "$NEXT" ] || [ "$NEXT" = "None" ] || [ "$NEXT" = "null" ] || [ "$COUNT" = "0" ]; then
-              break
-            fi
-            PAGE=$((PAGE+1))
-          done
+          echo "=== Fetching articles (page 1) ==="
+          curl -sf -u "${AUTH}" "${BASE}/articles.json?per_page=100&page=1" > results/articles_p1.json
 
-          echo "=== Summary ==="
-          python3 -c "
-          import json
-          cats = json.load(open('results/categories.json')).get('categories',[])
-          secs = json.load(open('results/sections.json')).get('sections',[])
-          arts = json.load(open('results/articles_all.json'))
+          echo "=== Fetching articles (page 2) ==="
+          curl -sf -u "${AUTH}" "${BASE}/articles.json?per_page=100&page=2" > results/articles_p2.json || echo '{"articles":[]}' > results/articles_p2.json
+
+          echo "=== Fetching articles (page 3) ==="
+          curl -sf -u "${AUTH}" "${BASE}/articles.json?per_page=100&page=3" > results/articles_p3.json || echo '{"articles":[]}' > results/articles_p3.json
+
+          echo "=== Building summary ==="
+          python3 << 'PYEOF'
+          import json, os
+
+          cats = json.load(open('results/categories.json')).get('categories', [])
+          secs = json.load(open('results/sections.json')).get('sections', [])
+
+          arts = []
+          for f in ['results/articles_p1.json', 'results/articles_p2.json', 'results/articles_p3.json']:
+              if os.path.exists(f):
+                  data = json.load(open(f))
+                  for a in data.get('articles', []):
+                      arts.append({
+                          'id': a['id'],
+                          'title': a['title'],
+                          'section_id': a.get('section_id'),
+                          'draft': a.get('draft'),
+                          'created_at': a.get('created_at'),
+                          'updated_at': a.get('updated_at'),
+                          'label_names': a.get('label_names', []),
+                          'vote_sum': a.get('vote_sum', 0),
+                          'vote_count': a.get('vote_count', 0)
+                      })
+
+          json.dump(arts, open('results/articles_all.json', 'w'), indent=2)
+
           print(f'Categories: {len(cats)}')
           print(f'Sections: {len(secs)}')
           print(f'Articles: {len(arts)}')
           print()
           for c in cats:
-              print(f\"Category: {c['name']} (id={c['id']})\")
-              cat_secs = [s for s in secs if s.get('category_id')==c['id']]
+              print(f"Category: {c['name']} (id={c['id']})")
+              cat_secs = [s for s in secs if s.get('category_id') == c['id']]
               for s in cat_secs:
-                  sec_arts = [a for a in arts if a.get('section_id')==s['id']]
-                  print(f\"  Section: {s['name']} ({len(sec_arts)} articles)\")
+                  sec_arts = [a for a in arts if a.get('section_id') == s['id']]
+                  print(f"  Section: {s['name']} ({len(sec_arts)} articles)")
                   for a in sec_arts:
                       draft = ' [DRAFT]' if a.get('draft') else ''
-                      print(f\"    - {a['title']}{draft}\")
-          " > results/summary.txt
-          cat results/summary.txt
+                      print(f"    - {a['title']}{draft}")
+          PYEOF
 
       - name: Upload results
         uses: actions/upload-artifact@v4
